[gd_scene load_steps=18 format=2]

[ext_resource path="res://gameplay-scripts/state-machines/state-machine.gd" type="Script" id=1]
[ext_resource path="res://gameplay-scripts/player/states/player-regular.gd" type="Script" id=2]
[ext_resource path="res://gameplay-scripts/Cam.gd" type="Script" id=3]
[ext_resource path="res://gameplay-scripts/player/player.gd" type="Script" id=4]
[ext_resource path="res://assets/protoKitty.png" type="Texture" id=5]
[ext_resource path="res://gameplay-scripts/player/resources/player-stats.gd" type="Script" id=6]
[ext_resource path="res://gameplay-scripts/player/player-skin.gd" type="Script" id=7]
[ext_resource path="res://gameplay-scripts/player/states/airborne.gd" type="Script" id=8]
[ext_resource path="res://gameplay-scripts/player/resources/player-collision.gd" type="Script" id=9]

[sub_resource type="Resource" id=4]
script = ExtResource( 9 )
offset = Vector2( 0, 0 )
height_radius = 14.0
width_radius = 9.0
push_height_offset = 8.0
push_radius = 1.0
ground_extension = 19.0
min_ground_extension = 1.0

[sub_resource type="Resource" id=5]
script = ExtResource( 9 )
offset = Vector2( 0, 0 )
height_radius = 17.0
width_radius = 9.0
push_height_offset = 8.0
push_radius = 1.0
ground_extension = 19.0
min_ground_extension = 1.0

[sub_resource type="Resource" id=3]
script = ExtResource( 6 )
acceleration = 158.75
deceleration = 1800.0
friction = 650.0
slope_factor = 750.0
top_speed = 475.0
dash_speed = 600.0
min_speed_to_brake = 240.0
min_speed_to_roll = 60.0
min_speed_to_detach = 500.0
unroll_speed = 30.0
slope_roll_up = 800.0
slope_roll_down = 1500.0
roll_deceleration = 600.0
roll_friction = 84.375
air_acceleration = 290.0
gravity = 787.5
max_jump_height = 420.0
min_jump_height = 250.0
slide_angle = 55.0
cling_slide_angle = 125.0
cling_friction = 850.0
cling_slope_factor = 110.0
cling_acceleration = 268.75
fall_angle = 80.0
min_speed_to_fall = 30.0
control_lock_duration = 0.25
control_lock_friction = 350.0
wall_grace_period = 0.4
wall_jump_direction_blend = 0.6

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "idle"

[sub_resource type="AnimationNodeTimeScale" id=7]

[sub_resource type="AnimationNodeTransition" id=8]
input_count = 1
input_0/name = "idle"
input_0/auto_advance = false

[sub_resource type="AnimationNodeBlendTree" id=9]
graph_offset = Vector2( -30.7268, 103.376 )
nodes/Animation/node = SubResource( 6 )
nodes/Animation/position = Vector2( 180, 180 )
nodes/TimeScale/node = SubResource( 7 )
nodes/TimeScale/position = Vector2( 560, 240 )
nodes/output/position = Vector2( 740, 280 )
nodes/state/node = SubResource( 8 )
nodes/state/position = Vector2( 360, 220 )
node_connections = [ "state", 0, "Animation", "output", 0, "TimeScale", "TimeScale", 0, "state" ]

[node name="Level" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 601, -84 )
collision_layer = 512
collision_mask = 225
script = ExtResource( 4 )
bounds = [ SubResource( 4 ), SubResource( 5 ) ]
stats = [ SubResource( 3 ) ]

[node name="StateMachine" type="Node2D" parent="Player"]
script = ExtResource( 1 )

[node name="Regular" type="Node2D" parent="Player/StateMachine"]
script = ExtResource( 2 )

[node name="Airborne" type="Node2D" parent="Player/StateMachine"]
script = ExtResource( 8 )

[node name="Skin" type="Sprite" parent="Player"]
texture = ExtResource( 5 )
script = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player/Skin"]
anims/idle = SubResource( 2 )

[node name="AnimationTree" type="AnimationTree" parent="Player/Skin"]
tree_root = SubResource( 9 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/TimeScale/scale = 1.0
parameters/state/current = 0

[node name="AirRayContainer" type="Node2D" parent="Player/Skin"]

[node name="RightRay" type="RayCast2D" parent="Player/Skin/AirRayContainer"]
position = Vector2( 9, 0 )
enabled = true
cast_to = Vector2( 0, 18 )

[node name="LeftRay" type="RayCast2D" parent="Player/Skin/AirRayContainer"]
position = Vector2( -9, 0 )
enabled = true
cast_to = Vector2( 0, 18 )

[node name="Camera" type="Camera2D" parent="."]
current = true
script = ExtResource( 3 )
TargetNodepath = NodePath("../Player")
lerpspeed = 0.0
zoomrange = Vector2( 0.25, 1.5 )

[node name="Tween" type="Tween" parent="Camera"]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -12, 28 )
scale = Vector2( 1.00046, 1 )
polygon = PoolVector2Array( -30, 37, -3, 42, 25, 36, 64, 36, 88, 33, 141, -6, 169, -18, 343, -19, 341, 146, 348, 168, 363, 189, 387, 204, 421, 208, 599, 206, 635, 200, 662, 182, 679, 153, 838, 125, 891, 127, 938, 217, 967, 227, 1069, 228, 1101, 219, 1151, 185, 1237, 227, 1346.38, 227, 1373.36, 224, 1409.35, 217, 1439.33, 198, 1457.32, 174, 1465.32, 142, 1471.32, -186, 1482.32, -185, 1528.29, 181, 1340, 349, -73, 339, -199, 185, -143, 50, -110, 42, -84, 36 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -145, 91, -127, 72, -234, 74, -268, 74, -290, 68, -304, 60, -316, 48, -324, 35, -327, 15, -326, -9, -319, -25, -310, -38, -294, -47, -279, -50, -239, -52, -150, -52, -150, -67, -103, -72, -105, -84, -329, -63, -363, -15, -349, 62, -314, 151, -241, 185, -149, 151 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 1, 33 )
polygon = PoolVector2Array( 598, -62, 593, 25, 543, 25, 598, 83, 658, 25, 605, 25, 601, -62 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 33, 0 )
polygon = PoolVector2Array( 1369, -108, 1370, -306, 1364, -346, 1342, -387, 1305, -415, 1263, -429, 1065, -429, 1067, -355 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 401, -101, 398, 59, 406, 59, 408, -107 )
